...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter e-mail" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YCQ-nr-O69">
                                        <rect key="frame" x="0.0" y="37" width="294" height="45"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailLabel"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="UXa-Yd-mRM"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yWc-y6-WVJ">
                                        <rect key="frame" x="0.0" y="134.5" width="294" height="45"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passwordLabel"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="lge-cX-Ar3"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
...
                                    <constraint firstAttribute="bottom" secondItem="yWc-y6-WVJ" secondAttribute="bottom" id="vQe-xz-Yxr"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yxc-uS-GDj">
                                <rect key="frame" x="45" y="588" width="324" height="44"/>
                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="HyG-cp-MY3"/>
                                </constraints>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="stringCellId"/>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="a2L-ae-e5M">
                                <rect key="frame" x="197" y="411" width="20" height="20"/>
                            </activityIndicatorView>
...
